@@ -105,7 +105,7 @@
 ######################################################################
 PKG_PRE_REMOVE="{
 
-export package_status=REMOVE
+export package_status=REMOVING
 
 }"
 ######################################################################
